# GridFire

./: .gitignore  Doxyfile  README.md  meson.build  meson_options.txt
.github/: pull_request_template.md
assets/static/: meson.build
assets/static/atomic/: README.md  mass_1.mas20.txt  meson.build
assets/static/atomic/include/: atomicSpecies.h  species.h
assets/static/const/: format.sh  meson.build
assets/static/reaclib/: meson.build  readme.md
assets/static/reaclib/include/: reaclib.h  reactions.h
assets/static/reaclib/include/gridfire/: reaclib.h  reactions.h
build-config/: meson.build
build-config/boost/: install.sh  meson.build
build-config/cppad/: meson.build  version
build-config/eigen/: meson.build
build-config/fourdst/: meson.build
build-config/pybind/: meson.build
build-config/quill/: meson.build
build-config/xxHash/: LICENSE  meson.build
docs/: annotated_dup.js  classes.html  classgridfire_1_1_adaptive_engine_view-members.html  classgridfire_1_1_adaptive_engine_view.js  classgridfire_1_1_dynamic_engine-members.html  classgridfire_1_1_engine-members.html  classgridfire_1_1_engine_view-members.html  classgridfire_1_1_graph_engine-members.html  classgridfire_1_1_graph_engine.html  classgridfire_1_1_network-members.html  classgridfire_1_1_network.js  classgridfire_1_1approx8_1_1_approx8_network-members.html  classgridfire_1_1approx8_1_1_approx8_network.js  classgridfire_1_1reaction_1_1_logical_reaction-members.html  classgridfire_1_1reaction_1_1_reaction-members.html  classgridfire_1_1reaction_1_1_reaction.html  classgridfire_1_1reaction_1_1_reaction_set.html  classgridfire_1_1reaction_1_1_reaction_set.js  classgridfire_1_1solver_1_1_direct_network_solver.html  classgridfire_1_1solver_1_1_direct_network_solver.js  classgridfire_1_1solver_1_1_network_solver_strategy-members.html  classgridfire_1_1solver_1_1_network_solver_strategy.js  classgridfire_1_1solver_1_1_q_s_e_network_solver-members.html  classgridfire_1_1solver_1_1_q_s_e_network_solver.js  concepts.html  dir_1cdf727c700d393da216e23f923be8b4.js  dir_2a1262ef5950eb718393488a3eb5aa9f.js  dir_3c60707488650cd3ec07ac1739eb797f.html  dir_5cccfa813acdf3744b542715860d37b2.html  dir_5cccfa813acdf3744b542715860d37b2.js  dir_6b2e1e22dfdea3280d50981209bf7529.html  dir_6b2e1e22dfdea3280d50981209bf7529.js  dir_a7655658c851688eff9381235a9676f0.html  dir_a7655658c851688eff9381235a9676f0.js  dir_aa1cdef39099aefa25ac81305b9dae77.js  dir_d5f908f1a3b7d6921d55b8696a8e83bc.js  engine__abstract_8h_source.html  engine__adaptive_8cpp.html  engine__adaptive_8cpp_source.html  engine__adaptive_8h_source.html  (+72 more)
docs/html/: _2_users_2tboudreaux_2_programming_24_d_s_t_a_r_2_grid_fire_2src_2network_2include_2gridfire_2engine_2engine_approx8_8h-example.html  annotated.html  annotated_dup.js  classes.html  classgridfire_1_1_adaptive_engine_view-members.html  classgridfire_1_1_adaptive_engine_view.html  classgridfire_1_1_adaptive_engine_view.js  classgridfire_1_1_dynamic_engine-members.html  classgridfire_1_1_dynamic_engine.html  classgridfire_1_1_dynamic_engine.js  classgridfire_1_1_engine.html  classgridfire_1_1_engine.js  classgridfire_1_1_engine_view.html  classgridfire_1_1_engine_view.js  classgridfire_1_1_file_defined_engine_view-members.html  classgridfire_1_1_file_defined_engine_view.html  classgridfire_1_1_file_defined_engine_view.js  classgridfire_1_1_graph_engine-members.html  classgridfire_1_1_graph_engine.html  classgridfire_1_1_graph_engine.js  classgridfire_1_1_network.html  classgridfire_1_1approx8_1_1_approx8_network.html  classgridfire_1_1io_1_1_m_e_s_a_network_file_parser-members.html  classgridfire_1_1io_1_1_m_e_s_a_network_file_parser.html  classgridfire_1_1io_1_1_m_e_s_a_network_file_parser.js  classgridfire_1_1io_1_1_network_file_parser-members.html  classgridfire_1_1io_1_1_network_file_parser.html  classgridfire_1_1io_1_1_network_file_parser.js  classgridfire_1_1io_1_1_simple_reaction_list_file_parser-members.html  classgridfire_1_1io_1_1_simple_reaction_list_file_parser.html  classgridfire_1_1io_1_1_simple_reaction_list_file_parser.js  (+270 more)
docs/search/: all_1.js  (+37 more)
src/: meson.build
src/network/: meson.build
src/network/include/gridfire/: netgraph.h  network.h
src/network/include/gridfire/engine/: engine_abstract.h  engine_adaptive.h  engine_approx8.h  engine_culled.h  engine_graph.h  engine_view_abstract.h
src/network/include/gridfire/engine/views/: engine_adaptive.h  engine_defined.h  engine_view_abstract.h
src/network/include/gridfire/io/: network_file.h
src/network/include/gridfire/partition/: partition_abstract.h  partition_ground.h  partition_rauscher_thielemann.h  partition_types.h  rauscher_thielemann_partition_data_record.h
src/network/include/gridfire/partition/composite/: partition_composite.h
src/network/include/gridfire/reaction/: reaclib.h  reaction.h
src/network/include/gridfire/screening/: screening_abstract.h  screening_bare.h  screening_types.h  screening_weak.h
src/network/include/gridfire/solver/: solver.h
src/network/include/gridfire/utils/: logging.h
src/network/lib/: approx8.cpp  netgraph.cpp  network.cpp
src/network/lib/engine/: engine_adaptive.cpp  engine_approx8.cpp  engine_graph.cpp
src/network/lib/engine/views/: engine_adaptive.cpp  engine_defined.cpp
src/network/lib/io/: network_file.cpp
src/network/lib/partition/: partition_ground.cpp  partition_rauscher_thielemann.cpp
src/network/lib/partition/composite/: partition_composite.cpp
src/network/lib/reaction/: reaclib.cpp  reaction.cpp
src/network/lib/screening/: screening_bare.cpp  screening_types.cpp  screening_weak.cpp
src/network/lib/solver/: solver.cpp
src/network/lib/utils/: logging.cpp
src/network/private/: approx8.cpp  netgraph.cpp  network.cpp
src/network/public/: approx8.h  netgraph.h  network.h
subprojects/: gtest.wrap  libcomposition.wrap  libconfig.wrap  libconstants.wrap  liblogging.wrap  quill.wrap  yaml-cpp.wrap
tests/: meson.build
tests/graphnet_sandbox/: approx8.net  main.cpp  meson.build
tests/network/: approx8Test.cpp  meson.build
utils/: bin_to_header.py
(+103 files in other folders)
